# cat-facts-cli

./: .mcp.json  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: CLAUDE.md
scripts/: hello.py
src/cat_facts_cli/: __init__.py  cli.py
tests/: test_cli.py  test_play.py
x_docs/: docs_typer.md  validation.md
x_docs/cat_facts/: 1_readme.md  2_api.md  3_create.md  openai.yaml
